--- a/laskarit/viikko2/unicafe/pyproject.toml
+++ b/laskarit/viikko2/unicafe/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
+invoke = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.2"
