--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+src/ui/__pycache__/
 /laskarit/viikko2/unicafe/src/__pycache__/
 /laskarit/viikko2/unicafe/src/tests/__pycache__/
 /laskarit/viikko2/maksukortti/src/tests/__pycache__/maksukortti_test.cpython-38-pytest-6.1.2.pyc
@@ -7,3 +8,7 @@
 /src/__pycache__/
 /.vscode/
 /ot-harjoitustyo.code-workspace
+laskarit/viikko2/maksukortti/src/tests/__pycache__/maksukortti_test.cpython-38-pytest-5.4.3.pyc
+src/.coverage
+src/htmlcov/
+src/tests/__pycache__/
