--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,12 @@ authors = ["asnabryg <8mixu8@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.6"
 pygame = "^2.0.1"
+invoke = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
+autopep8 = "^1.5.6"
+coverage = "^5.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
