--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-src/ui/__pycache__/
+2048/src/ui/__pycache__/
 /laskarit/viikko2/unicafe/src/__pycache__/
 /laskarit/viikko2/unicafe/src/tests/__pycache__/
 /laskarit/viikko2/maksukortti/src/tests/__pycache__/maksukortti_test.cpython-38-pytest-6.1.2.pyc
 /laskarit/viikko2/unicafe/.coverage
 /laskarit/viikko2/unicafe/htmlcov
 /laskarit/viikko2/unicafe/.vscode
-/src/__pycache__/
+/2048/src/__pycache__/
 /.vscode/
 /ot-harjoitustyo.code-workspace
 laskarit/viikko2/maksukortti/src/tests/__pycache__/maksukortti_test.cpython-38-pytest-5.4.3.pyc
-src/.coverage
-src/htmlcov/
-src/tests/__pycache__/
+/2048/src/.coverage
+2048/src/htmlcov/
+2048/src/tests/__pycache__/
