--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ laskarit/viikko2/maksukortti/src/tests/__pycache__/maksukortti_test.cpython-38-p
 2048/src/tests/__pycache__/
 2048/data/database.sqlite
 2048/src/ui/__pycache__/
+2048/src/tests/__pycache__/game_test.cpython-38-pytest-6.2.2.pyc
