--- a/2048/pyproject.toml
+++ b/2048/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.6"
 invoke = "^1.5.0"
 pygame = "^2.0.1"
 autopep8 = "^1.5.6"
+Pillow = "5.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
