--- a/2048/pyproject.toml
+++ b/2048/pyproject.toml
@@ -10,6 +10,7 @@ invoke = "^1.5.0"
 pygame = "^2.0.1"
 autopep8 = "^1.5.6"
 Pillow = "5.3.0"
+screeninfo = "^0.6.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
